// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker Snapshot tests calender Popper 1`] = `
<DatePicker
  allowSameDay={false}
  customInput={
    <TextFieldPresenter
      hidePopper={false}
      id="text-field-66166"
      onClearButtonClick={[Function]}
      selected={"2017-09-15T13:30:00.000Z"}
      type="text"
    />
  }
  dateFormat="L"
  dateFormatCalendar="MMMM YYYY"
  disabled={false}
  disabledKeyboardNavigation={false}
  dropdownMode="scroll"
  fixedHeight={true}
  hidePopper={false}
  isClearable={false}
  monthsShown={1}
  onBlur={[Function]}
  onChange={[Function]}
  onClickOutside={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMonthChange={[Function]}
  onSelect={[Function]}
  onYearChange={[Function]}
  popperModifiers={
    Object {
      "flip": Object {
        "enabled": false,
      },
      "offset": Object {
        "enabled": true,
        "offset": "0px, -30px",
      },
      "preventOverflow": Object {
        "enabled": true,
        "escapeWithReference": false,
      },
    }
  }
  popperPlacement="bottom-start"
  preventOpenOnFocus={false}
  readOnly={true}
  selected={"2017-09-15T13:30:00.000Z"}
  shouldCloseOnSelect={true}
  showMonthDropdown={false}
  showMonthYearDropdown={false}
  showTimeSelect={false}
  showYearDropdown={false}
  timeCaption="Time"
  timeIntervals={30}
  withPortal={false}
/>
`;

exports[`DatePicker Snapshot tests disabled view 1`] = `
<DatePicker
  allowSameDay={false}
  customInput={
    <TextFieldPresenter
      disabled={true}
      id="text-field-66166"
      onClearButtonClick={[Function]}
      selected={"2017-09-15T13:30:00.000Z"}
      type="text"
    />
  }
  dateFormat="L"
  dateFormatCalendar="MMMM YYYY"
  disabled={true}
  disabledKeyboardNavigation={false}
  dropdownMode="scroll"
  fixedHeight={true}
  isClearable={false}
  monthsShown={1}
  onBlur={[Function]}
  onChange={[Function]}
  onClickOutside={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMonthChange={[Function]}
  onSelect={[Function]}
  onYearChange={[Function]}
  popperModifiers={
    Object {
      "flip": Object {
        "enabled": false,
      },
      "offset": Object {
        "enabled": true,
        "offset": "0px, -30px",
      },
      "preventOverflow": Object {
        "enabled": true,
        "escapeWithReference": false,
      },
    }
  }
  popperPlacement="bottom-start"
  preventOpenOnFocus={false}
  readOnly={true}
  selected={"2017-09-15T13:30:00.000Z"}
  shouldCloseOnSelect={true}
  showMonthDropdown={false}
  showMonthYearDropdown={false}
  showTimeSelect={false}
  showYearDropdown={false}
  timeCaption="Time"
  timeIntervals={30}
  withPortal={false}
/>
`;

exports[`DatePicker Snapshot tests portal view 1`] = `
<DatePicker
  allowSameDay={false}
  customInput={
    <TextFieldPresenter
      id="text-field-66166"
      onClearButtonClick={[Function]}
      selected={"2017-09-15T13:30:00.000Z"}
      type="text"
      withPortal={true}
    />
  }
  dateFormat="L"
  dateFormatCalendar="MMMM YYYY"
  disabled={false}
  disabledKeyboardNavigation={false}
  dropdownMode="scroll"
  fixedHeight={true}
  isClearable={false}
  monthsShown={1}
  onBlur={[Function]}
  onChange={[Function]}
  onClickOutside={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMonthChange={[Function]}
  onSelect={[Function]}
  onYearChange={[Function]}
  popperModifiers={
    Object {
      "flip": Object {
        "enabled": false,
      },
      "offset": Object {
        "enabled": true,
        "offset": "0px, -30px",
      },
      "preventOverflow": Object {
        "enabled": true,
        "escapeWithReference": false,
      },
    }
  }
  popperPlacement="bottom-start"
  preventOpenOnFocus={false}
  readOnly={true}
  selected={"2017-09-15T13:30:00.000Z"}
  shouldCloseOnSelect={true}
  showMonthDropdown={false}
  showMonthYearDropdown={false}
  showTimeSelect={false}
  showYearDropdown={false}
  timeCaption="Time"
  timeIntervals={30}
  withPortal={true}
/>
`;

exports[`DatePicker Snapshot tests regular view 1`] = `
<DatePicker
  allowSameDay={false}
  customInput={
    <TextFieldPresenter
      id="text-field-66166"
      onClearButtonClick={[Function]}
      selected={"2017-09-15T13:30:00.000Z"}
      type="text"
    />
  }
  dateFormat="L"
  dateFormatCalendar="MMMM YYYY"
  disabled={false}
  disabledKeyboardNavigation={false}
  dropdownMode="scroll"
  fixedHeight={true}
  isClearable={false}
  monthsShown={1}
  onBlur={[Function]}
  onChange={[Function]}
  onClickOutside={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMonthChange={[Function]}
  onSelect={[Function]}
  onYearChange={[Function]}
  popperModifiers={
    Object {
      "flip": Object {
        "enabled": false,
      },
      "offset": Object {
        "enabled": true,
        "offset": "0px, -30px",
      },
      "preventOverflow": Object {
        "enabled": true,
        "escapeWithReference": false,
      },
    }
  }
  popperPlacement="bottom-start"
  preventOpenOnFocus={false}
  readOnly={true}
  selected={"2017-09-15T13:30:00.000Z"}
  shouldCloseOnSelect={true}
  showMonthDropdown={false}
  showMonthYearDropdown={false}
  showTimeSelect={false}
  showYearDropdown={false}
  timeCaption="Time"
  timeIntervals={30}
  withPortal={false}
/>
`;
